--- a/src/scss/content/code.scss
+++ b/src/scss/content/code.scss
@@ -1,9 +1,10 @@
 
 .minimal-code-scroll {
 	--code-white-space: pre;
-
+	
 	.HyperMD-codeblock.HyperMD-codeblock-bg {
 		overflow-y: scroll;
+		white-space: pre;
 	}
 	.cm-hmd-codeblock {
 		white-space: pre !important;
